--- a/style.css
+++ b/style.css
@@ -95,6 +95,10 @@ nav ul li a:hover::after{
     flex-basis:40% ;
 }
 
+.about-col-2 p{
+    padding: 10px 0;
+}
+
 .sub{
     font-size: 60px;
     font-weight: 600;
@@ -102,7 +106,7 @@ nav ul li a:hover::after{
 }
 .tab-title{
     display: flex;
-    margin: 20px 0 40px;
+    margin: 10px 0 40px;
 
 }
 .tab-links{
@@ -134,7 +138,8 @@ nav ul li a:hover::after{
 }
 .tab-cont ul li span{
     color: #2c64cccc;
-    font-size: 14px;
+    font-size: 24px;
+    font-weight: 300;
 }
 
 .tab-cont{
