--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
-
+html{
+    scroll-behavior: smooth;
+}
 body{
     background:black;
     color: white;
@@ -277,6 +279,17 @@ nav ul li a:hover::after{
     flex-basis: 60%;
 
 }
+.btn.btn2{
+    margin: 50px auto;
+    width: fit-content;
+    border-radius: 6px;
+    display: inline-block;
+    background:#1557d1;
+    text-decoration:none ;
+    color: white;
+    padding: 14px 50px;
+    border-radius: 5px;
+}
 .social-icons a img{
     width: 30px;
     margin-right: 15px;
@@ -318,3 +331,80 @@ form .btn{
     cursor: pointer;
 }
 
+.copyright{
+    width: 100%;
+    text-align: center;
+    padding: 25px 0;
+    background: #262626;
+    font-weight: 300;
+    margin-top: 20px;
+}
+nav .n{
+    display: none;
+}
+@media only screen and (max-width:600px) {
+    
+#header{
+    background-image:url();     
+}
+.headert{
+    margin-top: 100%;
+    font-size: 20px;
+}
+.headert h1{
+    font-size: 30px;
+    margin-top: 20px;
+}
+nav .n{
+    display: block;
+
+    width: 25px;
+}
+
+nav ul{
+    background: #262626;
+    position: fixed;
+    top: 0;
+    right: -200px;
+    width: 200px;
+    height: 100vh;
+    padding-top: 50px;
+    z-index: 2;
+    transition: 0.5s
+}
+nav ul li{
+    display: block;
+    margin: 25px;
+}
+nav ul img{
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    cursor: pointer;
+}
+.about-col-1{
+    display: none;
+
+}
+.about-col-2{
+    font-size: 15px;
+}
+.sub{
+    font-size: 40px;
+}
+.about-col-1,.about-col-2{
+    flex-basis: 100%;
+}
+.tab-links{
+    font-size: 15px;
+    margin-right: 20px
+}
+.contact-left , .contact-right{
+   
+}
+.row{
+    display: block;
+    justify-content: space-between;
+
+}
+}
